--- a/praymgroupp/docker-compose.yaml
+++ b/praymgroupp/docker-compose.yaml
@@ -1,5 +1,20 @@
-version: '3.4'
+networks:
+  dev:
+
 services:
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - './nginx.conf:/etc/nginx/nginx.conf'
+    depends_on:
+      - salary
+      - db-praym
+    networks:
+      - dev
+
+
   salary:
     build: salary
     ports:
@@ -10,6 +25,8 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db-praym:5432/praym
       - POSTGRES_USER=login
       - POSTGRES_PASSWORD=password
+    networks:
+      - dev
 
   db-praym:
     image: postgres:latest
@@ -21,3 +38,5 @@ services:
 #      - ./data:/var/lib/ewm-db/data
     ports:
       - "5430:5432"
+    networks:
+      - dev
