--- a/praymgroupp/salary/Dockerfile
+++ b/praymgroupp/salary/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:17 as build
+COPY --chown=node:node ./package*.json ./
 COPY target/*.jar app.jar
 # COPY target/classes/static/images /app/resources/static/images
 
