--- a/praymgroupp/salary/Dockerfile
+++ b/praymgroupp/salary/Dockerfile
@@ -3,8 +3,8 @@ COPY target/*.jar app.jar
 # COPY target/classes/static/images /app/resources/static/images
 
 FROM nginx:stable-alpine
-COPY --from=build /dist /usr/share/nginx/html
-COPY --from=build nginx.conf /etc/nginx.conf.d/default.conf
+# COPY --from=build /dist /usr/share/nginx/html
+# COPY --from=build nginx.conf /etc/nginx.conf.d/default.conf
 EXPOSE 8080
 CMD ["nginx", "-g", "daemon off;"]
 
