--- a/praymgroupp/salary/Dockerfile
+++ b/praymgroupp/salary/Dockerfile
@@ -1,11 +1,11 @@
 FROM openjdk:17 as build
-WORKDIR '/builddir'
+# WORKDIR '/builddir'
 COPY target/*.jar app.jar
 COPY target/classes/static/images /app/resources/static/images
 
 FROM nginx:stable-alpine
 # COPY --from=build /dist /usr/share/nginx/html
-COPY --from=builder /builddir/build /usr/share/nginx/html
+COPY --from=builder /build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/conf.d
 # COPY --from=build praymgroupp/nginx.conf /etc/nginx.conf.d/default.conf
