--- a/praymgroupp/salary/nginx.conf
+++ b/praymgroupp/salary/nginx.conf
@@ -1,11 +1,18 @@
-server {
-    listen 8080;
+user root;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        try_files $uri $uri/ /index.html =404;
+worker_processes 1;
+
+events {
+}
+
+http {
+    server {
+        listen 80;
+
+        server_name localhost;
+
+        location / {
+            proxy_pass http://salary:8080/;
+        }
     }
-
-    include /etc/nginx/extra-conf.d/*.conf;
 }
