--- a/praymgroupp/docker-compose.yaml
+++ b/praymgroupp/docker-compose.yaml
@@ -2,17 +2,17 @@ networks:
   dev:
 
 services:
-#  nginx:
-#    image: nginx:stable-alpine
-#    ports:
-#      - "80:80"
-#    volumes:
-#      - './nginx.conf:/etc/nginx/nginx.conf'
-#    depends_on:
-#      - salary
-#      - db-praym
-#    networks:
-#      - dev
+  nginx:
+    image: nginx:stable-alpine
+    ports:
+      - "80:80"
+    volumes:
+      - './nginx.conf:/etc/nginx/nginx.conf'
+    depends_on:
+      - salary
+      - db-praym
+    networks:
+      - dev
 
   salary:
     build: salary
