--- a/praymgroupp/nginx.conf
+++ b/praymgroupp/nginx.conf
@@ -9,9 +9,9 @@ http {
     server {
         listen 80;
 
-        server_name localhost;
+        server_name 95.142.37.35;
 
-        location / {
+        location /api/ {
             proxy_pass http://salary:8080/;
         }
     }
