--- a/praymgroupp/docker-compose.yaml
+++ b/praymgroupp/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
       - "80:80"
     volumes:
       - './nginx.conf:/etc/nginx/nginx.conf'
+      - './salary/src/main/resources/static/images:/app/resources/static/images'
     depends_on:
       - salary
       - db-praym
@@ -15,7 +16,9 @@ services:
       - dev
 
   salary:
-    build: salary
+#    build: salary
+    build:
+      context: ./salary
     ports:
       - "8080:8080"
     depends_on:
