--- a/praymgroupp/nginx.conf
+++ b/praymgroupp/nginx.conf
@@ -11,7 +11,7 @@ http {
 
         server_name 95.142.37.35;
 
-        location /api/ {
+        location / {
             proxy_pass http://salary:8080/;
         }
     }
